--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/sophiabarrett/food-festival#readme",
   "devDependencies": {
     "webpack": "^5.66.0",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.1"
   },
   "dependencies": {
