--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "webpack": "webpack --watch",
     "build": "webpack",
+    "start:dev": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,7 +24,8 @@
     "file-loader": "^6.2.0",
     "webpack": "^5.66.0",
     "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.3"
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
